--- a/com.tacshop.ru/www/feed-categories.html
+++ b/com.tacshop.ru/www/feed-categories.html
@@ -12,7 +12,7 @@
 
         <div class="profile-card">
 
-            <ons-icon icon="rss" class="profile-logo"></ons-icon>
+            <ons-icon icon="shopping-cart" class="profile-logo"></ons-icon>
             <div class="profile-name">Европейский текстиль - tac-shop</div>
             <div class="profile-id">@TACshopru</div>
             <div class="profile-desc">Осуществляйте покупки быстро и с максимальным комфортом.</div>
